assets/css/style.css
/* ... */
  .home-section .home-intro h1 {
    font-size: 70px;
    font-weight: 600;
    color: #373737;
    margin: 0 0 35px;
    line-height: 1; }
    @media (max-width: 1200px) {
      .home-section .home-intro h1 {
        font-size: 60px; } }
    @media (max-width: 767px) {
      .home-section .home-intro h1 {
        font-size: 45px;
        margin: 0 0 25px; } }
    .home-section .home-intro h1 > span {
      border-bottom: 2px solid #FEC448; }
  .home-section .home-intro p {
    font-size: 20px; }
    @media (max-width: 767px) {
      .home-section .home-intro p {
        font-size: 18px; } }
  .home-section .home-intro .btn-bar {
    padding-top: 10px; }
.home-image:hover{
  box-shadow: 3px 3px 0 0 #373737;
}
/* About
---------------------*/
.about-text h4 {
  font-weight: 600;
  text-indent: 2em;
  color: #373737;
  margin: 0 0 25px; }

.about-text p {
  text-indent: 2em;
  font-size: 22px; }

.about-text h5 {
  font-weight: 600;
  font-size: 26px;
  color: #FF651C;
  margin: 0; }

.about-text span {
  font-weight: 500;
  color: #373737; }

.about-sponsor {
  display: flex; 
  align-items: center; 
  justify-content: center;
}

.sponsor-img:hover {
  box-shadow: 3px 3px 0 0 #e0b8b8;
}
.sponsor-text {
  /* font-family: "Arial", sans-serif;  */
  font-family: Helvetica, sans-serif;
  font-size: 26px; 
  font-style: italic;                
  font-weight: bold;             
  color: rgb(206, 50, 52);    
  margin-right:20px;              
}
/* feature 
---------------------*/
.feature-box-01 {
  padding: 40px;
  border: 2px solid #373737;
  box-shadow: 0 0 0 0 #373737;
  transition: ease all 0.35s;
  display: -ms-flexbox;
  display: flex; }
  @media (max-width: 767px) {
    .feature-box-01 {
      padding: 30px; } }
  .feature-box-01 .icon {
    width: 70px;
    height: 70px;
    line-height: 1;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
        align-items: center;
    -ms-flex-pack: center;
        justify-content: center;
    border: 2px solid #373737;
    background: #fff;
    color: #373737;
    font-size: 32px; }
  .feature-box-01 .feature-content {
    -ms-flex: 0 0 calc(100% - 70px);
        flex: 0 0 calc(100% - 70px);
    max-width: calc(100% - 70px);
    padding-left: 20px; }
  .feature-box-01 h5 {
    font-size: 24px;
    color: #373737;
    font-weight: 600;
    margin-bottom: 10px; }
    @media (max-width: 767px) {
      .feature-box-01 h5 {
        font-size: 22px; } }
  .feature-box-01 p {
    margin: 0;
    color: #373737;
    font-size: 17px; }
  .feature-box-01:hover {
    box-shadow: 5px 5px 0 0 #373737; }

/* experience
---------------------*/
.feature-box-02 {
  padding: 15px;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-align: center;
      align-items: center;
  border: 2px solid #373737;
  box-shadow: 0 0 0 0 #373737;
  transition: ease all 0.35s; }
  @media (max-width: 767px) {
    .feature-box-02 {
      padding: 10px; } }
  .feature-box-02:hover {
    box-shadow: 3px 3px 0 0 #373737; }
  .feature-box-02 .icon {
    width: 50px;
    height: 50px;
    -ms-flex-align: center;
        align-items: center;
    -ms-flex-pack: center;
        justify-content: center;
    background: #fff;
    color: #373737;
    border: 2px solid #373737;
    font-size: 30px;
    display: -ms-flexbox;
    display: flex; }
  .feature-box-02 h6 {
    color: #373737;
    margin: 0;
    padding-left: 15px; }

/* Portfolio 
---------------------*/
.tags {
  margin-left: 50px;
  padding-bottom: 20px;
  width: 1100px;
  /* height: 70px; */
  /* overflow-x: auto; 
  overflow-y: hidden;
  white-space: nowrap; */
}
@media (max-width: 767px){
  .tags {
    margin-left: 20px;
    width: 350px;
  }
}
.tags span {
  display: inline-block;
  /* padding: 8px 10px; */
  color: #373737;
  /* letter-spacing: 1px; */
  font-size: 12px;
  border-radius: 30px;
  font-weight: 600;
  /* margin-right: 10px;
  margin-top:10px; */
}
.portfolio-box .portfolio-img {
  position: relative;
  border: 0px solid #373737;
  box-shadow: 0 0 0 0 #373737;
  transition: ease all 0.35s;
  display: flex;           /* 启用 flex 布局 */
  flex-direction: column;  /* 让子元素垂直排列 */
  align-items: center;     /* 水平居中 */
  justify-content: center; /* 垂直居中（可选，如果父容器有固定高度） */
  text-align: center;  }
  .portfolio-box .portfolio-img h4 {
    color: #373737;
    letter-spacing: 4px;
    font-weight: 600;
  }
  .portfolio-box .portfolio-img .gallery-link-icon {
    width: 40px;
    height: 40px;
    background: #fff;
    color: #373737;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -ms-flex-align: center;
        align-items: center;
    -ms-flex-pack: center;
        justify-content: center;
    border: 2px solid #373737;
    position: absolute;
    top: 15px;
    left: 0;
    transition: ease all 0.35s;
    opacity: 0; }
  /* .portfolio-box .portfolio-img:hover {
    box-shadow: 3px 3px 0 0 #373737; } */
    /* .portfolio-box .portfolio-img:hover .gallery-link-icon {
      left: 15px;
      opacity: 1; } */

/* .portfolio-box .portfolio-text h6 {
  margin-bottom: 18px; } */
  .portfolio-text {
    display: flex;
  }
  .portfolio-box .portfolio-text h4 span {
    display: inline-block;
    padding: 8px 10px;
    background: rgba(255, 101, 28, 0.2);
    color: #373737;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-size: 12px;
    border-radius: 30px; }

.portfolio-box .portfolio-text h4 {
  display: inline;
  color: #373737;
  font-weight: 600;
  font-size: 32px;
  margin-bottom: 20px; }
  @media (max-width: 767px) {
    .portfolio-box .portfolio-text h4 {
      font-size: 26px;
      margin-bottom: 10px; } }

.portfolio-box .portfolio-text a {
  color: #373737;
  text-decoration: none;
  text-align: left;
  display: inline;
}
.portfolio-box .portfolio-text a:hover {
  color: #f24e00;  
}
.portfolio-box .portfolio-text .btn-bar {
  padding-top: 10px; }

.portfolio-box .portfolio-text .px-btn {
  font-size: 12px; }
/* ... */

